Make Header fixed on mobile.

--- a/app/ui/landing/about-us/about-us.module.css
+++ b/app/ui/landing/about-us/about-us.module.css
@@ -62,6 +62,7 @@
         gap: 5rem;
         align-self: stretch;
         padding: 3.75rem 1.25rem;
+        margin-top: 3.75rem;
     }
 
     .about-us-container {
