--- a/app/ui/landing/contact-us/contact-us.module.css
+++ b/app/ui/landing/contact-us/contact-us.module.css
@@ -73,7 +73,7 @@
 
 @media (max-width: 64rem) {
     .contact-us-container {
-        padding: 5rem 0rem;
+        margin-top: 3.75rem;
     }
 
     .contact-us-form {
