--- a/app/ui/landing/hero-section/hero-section.module.css
+++ b/app/ui/landing/hero-section/hero-section.module.css
@@ -50,6 +50,7 @@
         flex-direction: column;
         gap: 1rem;
         padding: 0rem 16rem 0rem 16rem;
+        margin-top: 3.75rem;
     }
 
     .text-container div:first-child {
